I did a little bit
I think I'm done?

--- a/aboutcs.html
+++ b/aboutcs.html
@@ -38,12 +38,14 @@
             Association for Computing Machinery (ACM): ACM is the world's largest computing society. They provide their more than 100,000 members with life-long learning 
             development and learning with the help of researchers, educators, and professionals. Together, they raise awareness of important computational technical, educational,
             and social issues around the world. <br>
+            <img src="ACM image.png" alt="ACM Image">
             <a href="https://www.acm.org/about-acm/about-the-acm-organization">This is the ACM Website</a>
             <br><br>
         </li>
         <li>
             Computing Research Association (CRA): CRA is a non-profit association of North American departments of computer science and related fields. 
             The mission of CRA is to promote innovation by working together with industry and government to strengthen research in computing.<br>
+            <img src="CRA-Fallback.png" alt="CRA Image">
             <a href="https://cra.org/">This is the CRA Website</a>
             <br><br>
 
@@ -52,6 +54,7 @@
             Association for the Advancement of Artificial Intelligence (AAAI): AAAI is an international organization which promotes Artificial Intelligence. AAAI aims to 
             increase public awareness about AI, reasonable use of AI, and provide guidance about the future and potential of AI developments. They often hold many conferences,
             where they discuss the newest discoveries of AI, as well as keep members aware of the new research going on in the field.<br>
+            <img src="Association_for_the_Advancement_of_Artificial_Intelligence.svg.png" alt="AAAI Image">
             <a href="http://www.aaai.org/">This is the AAAI Website</a>
             <br><br>
         </li>
@@ -59,6 +62,7 @@
             Association for Women in Computing (AWC): AWC is one of the first professional organizations for women in computing. The main goal of AWC is to promote and 
             encourage the advancement of women in technology and computing professions. AWC also provides multiple opportunities for professional growth through networking 
             and other programs available. <br>
+            <img src="AWC-logo.jpg" alt="AWC Image">
             <a href="http://www.awc-hq.org/home.html">This is the AWC Website</a>
             <br><br>
         </li>
@@ -92,6 +96,7 @@
                     Machine learning for large-scale genomic data
                 </li>
             </ol>
+            <img src="machinelearning.jpg" alt="Machine Learning Image">
             <br>
             <a href="https://sriramlab.dgsom.ucla.edu/pages/">Machine Learning and Genomics Lab Website</a>
             <br><br>
@@ -101,6 +106,7 @@
             in Internet of Things, mobile computing, and more. Their interests are in making all these systems secure, privacy-aware, 
             wirelessly-networked, energy-efficient, etc. Overall, Professor Mani Srivastava and his research team are working across multiple
             layers of systems, including algorithms, software, and hardware to reach their goals.
+            <img src="embeddedsystems.jpg" alt="Embedded Systems Image">
             <br>
             <a href="http://nesl.ee.ucla.edu/">Network and Embedded Systems Lab Website</a>
             <br><br>
@@ -110,6 +116,7 @@
             The focus of WiNG is on design, implementation and experimentation of protocols, and algorithms for wireless data networks. 
             With Professor Songwu Lu and her research team, they are working towards reaching their goa of building dependable and 
             high-quality network solutions for the wireless internet. 
+            <img src="wirelessnetwork.jpg" alt="Wireless Network Image">
             <br>
             <a href="http://metro.cs.ucla.edu/">Wireless Networking Group (WiNG) Lab Website</a>
             <br><br>
@@ -119,6 +126,7 @@
             Multimedia Information System Technology Group (MIST): MIST is a research group based in the Computer Science department of 
             UCLA, in collaboration with the UCLA School of Medicine and the Department of Radiological Sciences. This group focuses in 
             multimedia database management, patent information retrieval and mining, and more. 
+            <img src="mist-layout-final_02.jpg" alt="MIST Image">
             <br>
             <a href="http://www.mist.cs.ucla.edu/">Multimedia Information System Technology Group (MIST)</a>
             <br><br>
