--- a/aboutus.html
+++ b/aboutus.html
@@ -22,9 +22,13 @@
 		</div>
 
 		<div class="about-entry">
-			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfp">
-			<h2>Ruben Green</h2>
-			<p>this is why i like cs</p>
+			<img src="IMG_0139.jpg" alt="Picture of Dorian Jimenez" class="pfp">
+			<h2>Dorian Jimenez</h2>
+			<p>I am actually not a CS Major, but instead I am an Electrical Engineering major. I chose Electrical Engineering for many reasons, mostly because
+				I really like hardware. Back in Junior High School, I got introduced with hardware in a small workshop class, which I thoroughly enjoyed.
+				We got some experience with breadboards, sautering, and circuits. After this class, I knew I wanted to work with hardware more
+				and so when I applied to UCLA, I applied as an Electrical Engineering major!
+			</p>
 		</div>
 
 		<div class="about-entry about-entry-alt">
