--- a/aboutcs.html
+++ b/aboutcs.html
@@ -16,11 +16,14 @@
             </div>
         </div>
         <div id="main">
+    <!--This is the about CS page, and I start off with an h1 header-->
     <h1> About CS </h1>
     <br>
+    <!--I then go on to write h3 tags with small bits of information-->
     <h3>CS, or Computer Science, is the study of computers and computational systems. </h3>
     <h3>Computer Science mostly deals with software, such as programming, which is different from Electrical Engineering for example, which deals mostly with hardware.</h3>
     <h3>In Computer Science, there are many key areas of focus, such as: </h3>
+    <!--This is an ordered list with some areas of focus of cs-->
     <ol>
         <li>
             Artificial Intelligence
@@ -31,6 +34,8 @@
         <li>Database Systems</li>
         <li>And much more!</li>
     </ol>
+
+    <!--This is the part about professional organizations, and it is another ordered list with some images-->
     <h3> Link and describe at least 4 professional organizations.</h3>
     <h3>Professional Computer Science Organizations</h3>
     <ol>
@@ -38,14 +43,18 @@
             Association for Computing Machinery (ACM): ACM is the world's largest computing society. They provide their more than 100,000 members with life-long learning 
             development and learning with the help of researchers, educators, and professionals. Together, they raise awareness of important computational technical, educational,
             and social issues around the world. <br>
+            <!--Added an image of the logo-->
             <img src="ACM image.png" alt="ACM Image">
+            <!--This is the link to the website of the organiztion-->
             <a href="https://www.acm.org/about-acm/about-the-acm-organization">This is the ACM Website</a>
             <br><br>
         </li>
         <li>
             Computing Research Association (CRA): CRA is a non-profit association of North American departments of computer science and related fields. 
             The mission of CRA is to promote innovation by working together with industry and government to strengthen research in computing.<br>
+            <!--Added an image of the logo-->
             <img src="CRA-Fallback.png" alt="CRA Image">
+            <!--This is the link to the website of the organiztion-->
             <a href="https://cra.org/">This is the CRA Website</a>
             <br><br>
 
@@ -54,7 +63,9 @@
             Association for the Advancement of Artificial Intelligence (AAAI): AAAI is an international organization which promotes Artificial Intelligence. AAAI aims to 
             increase public awareness about AI, reasonable use of AI, and provide guidance about the future and potential of AI developments. They often hold many conferences,
             where they discuss the newest discoveries of AI, as well as keep members aware of the new research going on in the field.<br>
+            <!--Added an image of the logo-->
             <img src="Association_for_the_Advancement_of_Artificial_Intelligence.svg.png" alt="AAAI Image">
+            <!--This is the link to the website of the organiztion-->
             <a href="http://www.aaai.org/">This is the AAAI Website</a>
             <br><br>
         </li>
@@ -62,7 +73,9 @@
             Association for Women in Computing (AWC): AWC is one of the first professional organizations for women in computing. The main goal of AWC is to promote and 
             encourage the advancement of women in technology and computing professions. AWC also provides multiple opportunities for professional growth through networking 
             and other programs available. <br>
+            <!--Added an image of the logo-->
             <img src="AWC-logo.jpg" alt="AWC Image">
+            <!--This is the link to the website of the organiztion-->
             <a href="http://www.awc-hq.org/home.html">This is the AWC Website</a>
             <br><br>
         </li>
@@ -71,7 +84,7 @@
 
     <br>
     <br>
-
+    <!--This is an ordered list about computer science -->
     <h3>There is lots of cutting edge research going on in the Computer Science field as of right now.</h3>
     <ol>
         <li>
@@ -79,6 +92,7 @@
             statistics, and biomedicine. One of the major focuses of the research team is the understanding of genomes. To pursue this 
             focus, they develop and expand tools from machine learning, high-dimensional statistics, and information theory.
             Other areas of focus for their research team are:
+            <!--An ordered list of topics by this research team-->
             <ol>
                 <li>
                     Genomic privacy
@@ -96,8 +110,10 @@
                     Machine learning for large-scale genomic data
                 </li>
             </ol>
+            <!--Random google image of machine learning-->
             <img src="machinelearning.jpg" alt="Machine Learning Image">
             <br>
+            <!--Link of Lab Website-->
             <a href="https://sriramlab.dgsom.ucla.edu/pages/">Machine Learning and Genomics Lab Website</a>
             <br><br>
         </li>
@@ -106,8 +122,10 @@
             in Internet of Things, mobile computing, and more. Their interests are in making all these systems secure, privacy-aware, 
             wirelessly-networked, energy-efficient, etc. Overall, Professor Mani Srivastava and his research team are working across multiple
             layers of systems, including algorithms, software, and hardware to reach their goals.
+            <!--Random google image of embedded systems-->
             <img src="embeddedsystems.jpg" alt="Embedded Systems Image">
             <br>
+            <!--Link of Lab Website-->
             <a href="http://nesl.ee.ucla.edu/">Network and Embedded Systems Lab Website</a>
             <br><br>
         </li>
@@ -116,8 +134,10 @@
             The focus of WiNG is on design, implementation and experimentation of protocols, and algorithms for wireless data networks. 
             With Professor Songwu Lu and her research team, they are working towards reaching their goa of building dependable and 
             high-quality network solutions for the wireless internet. 
+            <!--Random google image of wireless network-->
             <img src="wirelessnetwork.jpg" alt="Wireless Network Image">
             <br>
+            <!--Link of Lab Website-->
             <a href="http://metro.cs.ucla.edu/">Wireless Networking Group (WiNG) Lab Website</a>
             <br><br>
 
@@ -126,8 +146,10 @@
             Multimedia Information System Technology Group (MIST): MIST is a research group based in the Computer Science department of 
             UCLA, in collaboration with the UCLA School of Medicine and the Department of Radiological Sciences. This group focuses in 
             multimedia database management, patent information retrieval and mining, and more. 
+            <!--Random google image of mist logo-->
             <img src="mist-layout-final_02.jpg" alt="MIST Image">
             <br>
+            <!--Link of Lab Website-->
             <a href="http://www.mist.cs.ucla.edu/">Multimedia Information System Technology Group (MIST)</a>
             <br><br>
         </li>
