--- a/aboutengineering.html
+++ b/aboutengineering.html
@@ -17,16 +17,21 @@
     </div>
     </div>
     <div id="main">
+      <!--This is just my h1 header, about engineering-->
     <h1> About Engineering </h1>
     <br>
+    <!--Randomg google photo of computer science-->
     <img src="random computerscience image.jpeg" alt="Computer Science Image">
     <br>
+    <!--I had some h3 tags discussing engineering in general and some fun facts about it-->
     <h3>Engineering by definition is "the branch of science and technology concerned with the design, building, and use of engines, machines, and structures"</h3>
     <h3>More broadly, engineering is about helping others.</h3>
     <h3>Engineering is about innovating and creating solutions that are useful to other people.</h3>
     <h3>Engineers apply math, science, and technology to solve problems faced by others.</h3>
+    <!--Random engineering image from google-->
     <img src="randomengineeringimage.jpg" alt="Engineering Image">
     <h3>Here are some examples of types of engineering:</h3>
+    <!--Ordered List of some lesser known types of engineering-->
     <ol>
         <li>
             Environmental Engineering: <br>
@@ -46,7 +51,7 @@
     </ol>
     <br>
     
-        
+    <!--These are the links where I found the information I used for the About Engineering Page-->
     <h3>Links with Information:
         <br>
         <a href="https://www.lexico.com/en/definition/engineering">Lexico</a>
