updated alex's section

--- a/aboutus.html
+++ b/aboutus.html
@@ -53,9 +53,9 @@
 		</div>
 
 		<div class="about-entry about-entry-alt">
-			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfpalt">
-			<h2>Someone's Name</h2>
-			<p>More sample Text</p>
+			<img src="gIMG_5077.JPG" alt="Picture of Alejandro Marquez Vera" class="pfp">
+			<h2>Alejandro Marquez Vera</h2>
+			<p>I chose Engineering, and CS in specific because of multiple reasons. My Dad is a EE major and engineer, so I always looked up to him and wanted to go into a 			similar field, especially because of all the time I spent bonding with him when he helped me with STEM homework, or simply explained some concept to me about 				science. Another reason is my love of racing and Formula 1. I have been a racing and Formula 1 fan for a years, and the amount of technology that goes into the cars 			always amazed me, and made me want to pursue engineering. Finally, I chose CS specifically because of the versatility it provides. Almost any company needs 				programmers because most companies have websites, apps, etc. This makes for more career opportunities, and areas of focus. </p>
 		</div>
 	</div>
 </body>
