--- a/ComputerScience.html
+++ b/ComputerScience.html
@@ -23,6 +23,7 @@ body {
         </div>
     </div>
     <div id="landing-bg"></div>
+    <h1 id="landing-text">Welcome to Computer Science!</h1>
     <a href="aboutengineering.html" id="landing-link">Get Started</a>
   </body>
 </html>
