--- a/learnCS.html
+++ b/learnCS.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <div class="topbar">
-            <a class="logo">Computer Science</a>
+            <a class="logo" href="ComputerScience.html">Computer Science</a>
             <div class="topbar-right">
                 <a href="aboutengineering.html">About Engineering</a>
-                <a class="active" href="aboutcs.html">About CS</a>
+                <a href="aboutcs.html">About CS</a>
                 <a href="Jobs.html">CS Careers</a>
-                <a href="">CS Academics</a>
+                <a class="active" href="learnCS.html">CS Academics</a>
                 <a href="aboutus.html">About Us</a>
             </div>
         </div>
