--- a/Jobs.html
+++ b/Jobs.html
@@ -9,7 +9,7 @@
     
 <!-- Top Bar links -->
     <div class="topbar">
-      <a class="logo" href="ComputerScience.html">Computer Science</a>
+      <a class="logo" href="index.html">Computer Science</a>
       <div class="topbar-right">
         <a href="aboutengineering.html">About Engineering</a>
         <a href="aboutcs.html">About CS</a>
@@ -21,7 +21,7 @@
     <div id="main">
      
    <!--first section Career options and small picture-->
-   <h1>Career Options</h1>
+   <h1 align="center">Career Options</h1>
    <img src="cscareers.jpg" alt="Computer Science Careers" style="width:400px;height:350px;float:right;margin:20px;">
    <p>
      Computer Science is a field with a large range of career options that keeps growing every day. For example, Artificial Inteligence, it was and it is still a developing field as the article "The Learning Machines" explains how the Google X lab made huge contributions to AI using deep-learning and how companies like Apple and IBM where competing to get people with that knowledge in their team.
