--- a/aboutcs.html
+++ b/aboutcs.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="topbar">
-            <a class="logo" href="ComputerScience.html">Computer Science</a>
+            <a class="logo" href="index.html">Computer Science</a>
             <div class="topbar-right">
                 <a href="aboutengineering.html">About Engineering</a>
                 <a class="active" href="aboutcs.html">About CS</a>
@@ -17,7 +17,7 @@
         </div>
         <div id="main">
     <!--This is the about CS page, and I start off with an h1 header-->
-    <h1> About CS </h1>
+    <h1 align="center"> About CS </h1>
     <br>
     <!--I then go on to write h3 tags with small bits of information-->
     <h3>CS, or Computer Science, is the study of computers and computational systems. </h3>
@@ -35,49 +35,49 @@
         <li>And much more!</li>
     </ol>
 
-    <!--This is the part about professional organizations, and it is another ordered list with some images-->
-    <h3> Link and describe at least 4 professional organizations.</h3>
+    <!--This is the part about professional organizations, and it is another unordered list with some images-->
     <h3>Professional Computer Science Organizations</h3>
-    <ol>
+    <ul>
         <li>
+            <hr>
+                        <!--Added an image of the logo-->
+            <img src="ACM image.png" alt="ACM Image" style="width:100px;margin:2px 30px;" align="right">
             Association for Computing Machinery (ACM): ACM is the world's largest computing society. They provide their more than 100,000 members with life-long learning 
             development and learning with the help of researchers, educators, and professionals. Together, they raise awareness of important computational technical, educational,
             and social issues around the world. <br>
-            <!--Added an image of the logo-->
-            <img src="ACM image.png" alt="ACM Image">
             <!--This is the link to the website of the organiztion-->
             <a href="https://www.acm.org/about-acm/about-the-acm-organization">This is the ACM Website</a>
-            <br><br>
+            <br><br><br><br><hr>
         </li>
         <li>
+                        <!--Added an image of the logo-->
+            <img src="CRA-Fallback.png" alt="CRA Image" style="width:100px;margin:2px 30px;" align="right">
             Computing Research Association (CRA): CRA is a non-profit association of North American departments of computer science and related fields. 
             The mission of CRA is to promote innovation by working together with industry and government to strengthen research in computing.<br>
-            <!--Added an image of the logo-->
-            <img src="CRA-Fallback.png" alt="CRA Image">
             <!--This is the link to the website of the organiztion-->
             <a href="https://cra.org/">This is the CRA Website</a>
-            <br><br>
+            <br><br><br><br><br><hr>
 
         </li>
         <li>
+            <!--Added an image of the logo-->
+            <img src="Association_for_the_Advancement_of_Artificial_Intelligence.svg.png" alt="AAAI Image" style="width:100px;margin:2px 30px;" align="right">
             Association for the Advancement of Artificial Intelligence (AAAI): AAAI is an international organization which promotes Artificial Intelligence. AAAI aims to 
             increase public awareness about AI, reasonable use of AI, and provide guidance about the future and potential of AI developments. They often hold many conferences,
             where they discuss the newest discoveries of AI, as well as keep members aware of the new research going on in the field.<br>
-            <!--Added an image of the logo-->
-            <img src="Association_for_the_Advancement_of_Artificial_Intelligence.svg.png" alt="AAAI Image">
             <!--This is the link to the website of the organiztion-->
             <a href="http://www.aaai.org/">This is the AAAI Website</a>
-            <br><br>
+            <br><br><br><hr>
         </li>
         <li>
+            <!--Added an image of the logo-->
+            <img src="AWC-logo.jpg" alt="AWC Image" style="width:100px;margin:2px 30px;" align="right">
             Association for Women in Computing (AWC): AWC is one of the first professional organizations for women in computing. The main goal of AWC is to promote and 
             encourage the advancement of women in technology and computing professions. AWC also provides multiple opportunities for professional growth through networking 
             and other programs available. <br>
-            <!--Added an image of the logo-->
-            <img src="AWC-logo.jpg" alt="AWC Image">
             <!--This is the link to the website of the organiztion-->
             <a href="http://www.awc-hq.org/home.html">This is the AWC Website</a>
-            <br><br>
+            <br><br><hr>
         </li>
     </ol>
 
@@ -86,6 +86,8 @@
     <br>
     <!--This is an ordered list about computer science -->
     <h3>There is lots of cutting edge research going on in the Computer Science field as of right now.</h3>
+                <!--Random google image of machine learning-->
+            <img src="machinelearning.jpg" alt="Machine Learning Image" style="width:300px;margin:2px 30px;" align="right">
     <ol>
         <li>
             Machine Learning and Genomics Lab: Professor Sankararaman and his research group handle research with computer science, 
@@ -110,44 +112,42 @@
                     Machine learning for large-scale genomic data
                 </li>
             </ol>
-            <!--Random google image of machine learning-->
-            <img src="machinelearning.jpg" alt="Machine Learning Image">
             <br>
             <!--Link of Lab Website-->
             <a href="https://sriramlab.dgsom.ucla.edu/pages/">Machine Learning and Genomics Lab Website</a>
-            <br><br>
+            <br><br><hr>
         </li>
         <li>
+                        <!--Random google image of embedded systems-->
+            <img src="embeddedsystems.jpg" alt="Embedded Systems Image" style="width:300px;margin:2px 30px;" align="right">
             Network and Embedded Systems Lab: This research group is in the area of embedded and cyber-physical systems for applications
             in Internet of Things, mobile computing, and more. Their interests are in making all these systems secure, privacy-aware, 
             wirelessly-networked, energy-efficient, etc. Overall, Professor Mani Srivastava and his research team are working across multiple
-            layers of systems, including algorithms, software, and hardware to reach their goals.
-            <!--Random google image of embedded systems-->
-            <img src="embeddedsystems.jpg" alt="Embedded Systems Image">
+            layers of systems, including algorithms, software, and hardware to reach their goals
             <br>
             <!--Link of Lab Website-->
             <a href="http://nesl.ee.ucla.edu/">Network and Embedded Systems Lab Website</a>
-            <br><br>
+            <br><br><br><br><br><br><br><hr>
         </li>
         <li>
+                        <!--Random google image of wireless network-->
+            <img src="wirelessnetwork.jpg" alt="Wireless Network Image" style="width:100px;margin:2px 30px;" align="right">
             Wireless Networking Group (WiNG) Lab: WiNG's research includes the areas of cloud computing, mobile systems, and wireless networking.
             The focus of WiNG is on design, implementation and experimentation of protocols, and algorithms for wireless data networks. 
             With Professor Songwu Lu and her research team, they are working towards reaching their goa of building dependable and 
             high-quality network solutions for the wireless internet. 
-            <!--Random google image of wireless network-->
-            <img src="wirelessnetwork.jpg" alt="Wireless Network Image">
             <br>
             <!--Link of Lab Website-->
             <a href="http://metro.cs.ucla.edu/">Wireless Networking Group (WiNG) Lab Website</a>
-            <br><br>
+            <br><br><hr>
 
         </li>
         <li>
+                        <!--Random google image of mist logo-->
+            <img src="mist-layout-final_02.jpg" alt="MIST Image" style="width:150px;margin:2px 30px;" align="right">
             Multimedia Information System Technology Group (MIST): MIST is a research group based in the Computer Science department of 
             UCLA, in collaboration with the UCLA School of Medicine and the Department of Radiological Sciences. This group focuses in 
             multimedia database management, patent information retrieval and mining, and more. 
-            <!--Random google image of mist logo-->
-            <img src="mist-layout-final_02.jpg" alt="MIST Image">
             <br>
             <!--Link of Lab Website-->
             <a href="http://www.mist.cs.ucla.edu/">Multimedia Information System Technology Group (MIST)</a>
