--- a/aboutengineering.html
+++ b/aboutengineering.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="topbar">
-    <a class="logo" href="ComputerScience.html">Computer Science</a>
+    <a class="logo" href="index.html">Computer Science</a>
     <div class="topbar-right">
         <a class="active" href="aboutengineering.html">About Engineering</a>
         <a href="aboutcs.html">About CS</a>
@@ -18,18 +18,19 @@
     </div>
     <div id="main">
       <!--This is just my h1 header, about engineering-->
-    <h1> About Engineering </h1>
+    <h1 align="center"> About Engineering </h1>
     <br>
     <!--Randomg google photo of computer science-->
-    <img src="random computerscience image.jpeg" alt="Computer Science Image">
+    <img src="random computerscience image.jpeg" alt="Computer Science Image" class="pfp">
     <br>
     <!--I had some h3 tags discussing engineering in general and some fun facts about it-->
     <h3>Engineering by definition is "the branch of science and technology concerned with the design, building, and use of engines, machines, and structures"</h3>
     <h3>More broadly, engineering is about helping others.</h3>
     <h3>Engineering is about innovating and creating solutions that are useful to other people.</h3>
     <h3>Engineers apply math, science, and technology to solve problems faced by others.</h3>
+    <hr>
     <!--Random engineering image from google-->
-    <img src="randomengineeringimage.jpg" alt="Engineering Image">
+    <img src="randomengineeringimage.jpg" alt="Engineering Image" style="width:500px;margin:2px 30px;" align="right">
     <h3>Here are some examples of types of engineering:</h3>
     <!--Ordered List of some lesser known types of engineering-->
     <ol>
