--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
 
   <body>
    <div class="topbar">
-        <a class="logo" href="index.html">Computer Science</a>
+        <a class="logo" href="ComputerScience.html">Computer Science</a>
         <div class="topbar-right">
             <a href="aboutengineering.html">About Engineering</a>
             <a href="aboutcs.html">About CS</a>
