--- a/learnCS.html
+++ b/learnCS.html
@@ -10,7 +10,7 @@
     <body>
 	<!--sets up toolbar at the top with links to each page -->
         <div class="topbar">
-            <a class="logo" href="ComputerScience.html">Computer Science</a>
+            <a class="logo" href="index.html">Computer Science</a>
             <div class="topbar-right">
                 <a href="aboutengineering.html">About Engineering</a>
                 <a href="aboutcs.html">About CS</a>
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div id="main">
-    <h1> Learn CS </h1>
+    <h1 align="center"> Learn CS </h1>
     <br>
 	<!-- text introducing computer science-->
     <h3>CS is a popular major that can be studied at almost any university</h3>
