--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="topbar">
-		<a class="logo" href="ComputerScience.html">Computer Science</a>
+		<a class="logo" href="index.html">Computer Science</a>
 		<div class="topbar-right">
 			<a href="aboutengineering.html">About Engineering</a>
 			<a href="aboutcs.html">About CS</a>
@@ -20,7 +20,7 @@
 		<div id="about-header">
 			<h1>Who Are We?</h1>
 		</div>
-
+		<!--person card-->
 		<div class="about-entry">
 			<img src="IMG_0139.jpg" alt="Picture of Dorian Jimenez" class="pfp">
 			<h2>Dorian Jimenez</h2>
@@ -31,6 +31,7 @@
 			</p>
 		</div>
 
+		<!--person card-->
 		<div class="about-entry about-entry-alt">
 			<img src="IMG_0210_Original.jpg" alt="Picture of Maria Gill" class="pfpalt">
 			<h2>Maria Gill</h2>
@@ -46,14 +47,16 @@
 			</p>
 		</div>
 
+		<!--person card-->
 		<div class="about-entry">
-			<img src="googleApps.jpg" alt="Picture of Ruben Green" class="pfp">
-			<h2>Someone's Name</h2>
-			<p>this is why i like cs</p>
+			<img src="IMG_0590.JPG" alt="Picture of Ruben Green" class="pfp">
+			<h2>Ruben Green</h2>
+			<p>I have always enjoyed problem solving and logical thinking, so I chose to be an engineer to be able to solve problems in a professional context. I always knew I wanted to be a stem major of some sort. My dad is a programmer, and he introduced me to computers. When I began to learn programming, I found that I really enjoyed it, and so I chose to major in CS. One day, I hope to work as a game developer, using programming in a creative context.</p>
 		</div>
-
+		
+		<!--person card-->
 		<div class="about-entry about-entry-alt">
-			<img src="gIMG_5077.JPG" alt="Picture of Alejandro Marquez Vera" class="pfp">
+			<img src="IMG_5077.JPG" alt="Picture of Alejandro Marquez Vera" class="pfpalt">
 			<h2>Alejandro Marquez Vera</h2>
 			<p>I chose Engineering, and CS in specific because of multiple reasons. My Dad is a EE major and engineer, so I always looked up to him and wanted to go into a 			similar field, especially because of all the time I spent bonding with him when he helped me with STEM homework, or simply explained some concept to me about 				science. Another reason is my love of racing and Formula 1. I have been a racing and Formula 1 fan for a years, and the amount of technology that goes into the cars 			always amazed me, and made me want to pursue engineering. Finally, I chose CS specifically because of the versatility it provides. Almost any company needs 				programmers because most companies have websites, apps, etc. This makes for more career opportunities, and areas of focus. </p>
 		</div>
